# reinforce-trader

./: .env.sample  .gitignore  Dockerfile  Procfile  README.md  classifier_v1.py  cli.py  docker-compose.yml  generate_datalake_template.py  pyproject.toml  run_app.py  run_clustering_experiment.py  run_clustering_hparams_search.py  run_dash_app.py  run_experiment.py  run_hparams_search.py  run_pairwise_search.py
dash_app/: main.py  requirements.txt
dash_app/components/: navbar.py
dash_app/pages/: add_trade.py  home.py  trades.py
dash_app/services/: api_server_service.py  yf_service.py
dockerfiles/dash_app/: Dockerfile
dockerfiles/reinforce_trader/: Dockerfile
examples/backtesting/: run_buy_and_hold_backtesting.py  run_naive_cluster_backtesting.py
notebooks/: codependency_analysis.ipynb  regression_analysis.ipynb  triple_barrier_label_analysis.ipynb
reinforce_trader/: __init__.py  main.py
reinforce_trader/api/: app.py  config.py  constants.py  logger.py
reinforce_trader/api/historical_data/: router.py  service.py
reinforce_trader/api/mongodb/: dependencies.py  utils.py
reinforce_trader/api/strategies/: router.py  service.py
reinforce_trader/backtesting/: backtesting.py
reinforce_trader/research/: create_classifier_v1.py  create_clustering_v1.py  datalake_client.py  dataset.py  errors.py  feature_pipeline.py  get_sequences.py  supervised_model_trainer.py  visualizations.py
scripts/: candlestick_pipeline.py  correlation_pipeline.py  download_fx_historical.py  download_stock_historical.py  run_correlation_test.py  triple_barrier_pipeline.py
(+46 files in other folders)
